// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentAssertion renders an attached image 1`] = `
<WithStyles(ForwardRef(Card))>
  <AttachmentAssertionCardHeader
    file_name="tmpthpcdtwo.png"
    file_size={990}
    src="/api/v1/reports/123/attachments/tmpthpcdtwo-ad4f4c6e94971896a71b4a1d47785a90b19f6565-990.png"
  />
  <WithStyles(ForwardRef(CardContent))>
    <Styled(MuiBox)
      mx="auto"
      width="fit-content"
    >
      <figure>
        <img
          alt={null}
          src="/api/v1/reports/123/attachments/tmpthpcdtwo-ad4f4c6e94971896a71b4a1d47785a90b19f6565-990.png"
        />
        <figcaption
          className="caption_775tb"
        />
      </figure>
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`AttachmentAssertion renders an attached text file 1`] = `
<TextAttachment
  devMode={false}
  file_name="tmpthpcdtwn.txt"
  file_size={900}
  src="/api/v1/reports/123/attachments/tmpthpcdtwn-cd4f4c6e94971896a71b4a1d47785a90b19f6565-900.txt"
/>
`;

exports[`AttachmentAssertion renders an attachment using interactive API 1`] = `
<TextAttachment
  devMode={false}
  file_name="tmpthpcdtwn.txt"
  file_size={900}
  src="/api/v1/interactive/attachments/tmpthpcdtwn-cd4f4c6e94971896a71b4a1d47785a90b19f6565-900.txt"
/>
`;

exports[`AttachmentAssertion renders an unknown filetype 1`] = `
<WithStyles(ForwardRef(Card))>
  <AttachmentAssertionCardHeader
    file_name="tmpthpcdtwy.xyz"
    file_size={200}
    src="/api/v1/reports/123/attachments/tmpthpcdtwy-bd4f4c6e94971896a71b4a1d47785a90b19f6565-200.xyz"
  />
</WithStyles(ForwardRef(Card))>
`;
